--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -756,9 +756,11 @@ footer #tzine-actions iframe{
 	-webkit-box-shadow : 0px 0px 5px rgba(0,0,0,1.0);
 	-moz-box-shadow : 0px 0px 5px rgba(0,0,0,1.0);
 	box-shadow : 0px 0px 5px rgba(0,0,0,1.0);
-	font-size : 20px;
-	color : #d1ff6e;
+        font-size: 15px;
+        font-weight: 700;
+	/*color : #d1ff6e;*/
 	padding : 1px 10px;
+        /*
 	background : #5f1e1e;
 	background : -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5f1e1e), color-stop(100%,#f51e1e));
 	background : -moz-linear-gradient(top, #5f1e1e 0%, #f51e1e 100%);
@@ -766,6 +768,7 @@ footer #tzine-actions iframe{
 	background : -o-linear-gradient(top, #5f1e1e 0%, #f51e1e 100%);
 	background : -ms-linear-gradient(top, #5f1e1e 0%, #f51e1e 100%);
 	background : linear-gradient(top, #5f1e1e 0%, #f51e1e 100%);
+        */
 	filter : progid:DXImageTransform.Microsoft.gradient( startColorstr='#5f1e1e', endColorstr='#f51e1e',GradientType=0 );
 	cursor: pointer;
 }
