--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -772,3 +772,19 @@ footer #tzine-actions iframe{
 	filter : progid:DXImageTransform.Microsoft.gradient( startColorstr='#5f1e1e', endColorstr='#f51e1e',GradientType=0 );
 	cursor: pointer;
 }
+
+.previewimage {
+    max-width: 300px;
+    max-height:300px;
+}
+
+#simplemodal-overlay {background-color:#000;}
+#simplemodal-container {background-color:#333; border:8px solid #444; padding:12px;}
+
+#header {
+    background-image: url('../img/exertis-logo.png');
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 55px;
+
+}
